package br.com.housemanager.stockflow.model.Item;

public class CleaningItem extends Item {
    public CleaningItem(String name) {
        super(name, ItemCategory.CLEANING);
    }
}