package br.com.housemanager.stockflow.model.Item;


public class FoodItem extends Item {
    public FoodItem(String name) {
        super(name, ItemCategory.FOOD);
    }
}
