package br.com.housemanager.stockflow.model.Item;

public class HousewareItem extends Item {
    public HousewareItem(String name) {
        super(name, ItemCategory.HOUSEWARE);
    }
}
