package br.com.housemanager.stockflow.model.Item;

public class ServiceItem extends Item {
    public ServiceItem(String name) {
        super(name, ItemCategory.SERVICE);
    }
}